[package]
name = "stix"
version = "0.1.0"
authors = ["Ted Driggs <ted.driggs@outlook.com>"]
edition = "2018"
license = "MIT"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.125", features = ["derive"] }
strum = { version = "0.20.0", features = ["derive"] }
thiserror = "1.0.24"
url = { version = "2.2.1", features = ["serde"] }
uuid = "0.8.2"
