[package]
name = "stix_derive"
version = "0.1.0"
authors = ["Ted Driggs <ted.driggs@outlook.com>"]
repository = "https://github.com/TedDriggs/cti"
edition = "2018"
license = "MIT"
description = """
Proc-macro helpers for stix crate.
"""

[lib]
proc-macro = true

[dependencies]
darling = "0.12.3"
heck = "0.3.2"
proc-macro2 = "1.0.26"
quote = "1.0.9"
syn = { version = "1.0.69", features = ["extra-traits"] }
